<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_job_listings"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_job_listings" />

        <item
            android:id="@+id/nav_resume_builder"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_resume_builder" />

        <item
            android:id="@+id/nav_institutes"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_institutes" />

        <item
            android:id="@+id/nav_job_fairs"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_job_fairs" />

        <item
            android:id="@+id/nav_document_uploads"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/menu_document_uploads" />

    </group>

</menu>
